k8s/k8-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drs-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drs-api
  template:
    metadata:
      labels:
        app: drs-api
    spec:
      containers:
        - name: drs-api-container
          image: registry.digitalocean.com/scidar/drs-api:latest
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: drs-api-service
spec:
  selector:
    app: drs-api
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
